demos/asm-mcp-multi-clusters/terraform/lab_materials/bank-of-anthos/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - asm-ingress/asm-ingressgateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
