demos/asm-mcp-multi-clusters/terraform/lab_materials/bank-of-anthos/transaction-history-with-fault-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transactionhistory-with-fault
spec:
  hosts:
  - transactionhistory
  http:
  - route:
    - destination:
        host: transactionhistory
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 500
      delay:
        fixedDelay: 10s
        percentage:
          value: 50
